// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`socket proxy customAuthRequestHandler return the correct buffer with location ID 1`] = `
{
  "data": [
    1,
    0,
    0,
    0,
    155,
    101,
    121,
    74,
    104,
    98,
    71,
    99,
    105,
    79,
    105,
    74,
    73,
    85,
    122,
    73,
    49,
    78,
    105,
    73,
    115,
    73,
    110,
    82,
    53,
    99,
    67,
    73,
    54,
    73,
    107,
    112,
    88,
    86,
    67,
    74,
    57,
    46,
    101,
    121,
    74,
    122,
    100,
    87,
    73,
    105,
    79,
    105,
    73,
    120,
    77,
    106,
    77,
    48,
    78,
    84,
    89,
    51,
    79,
    68,
    107,
    119,
    73,
    105,
    119,
    105,
    98,
    109,
    70,
    116,
    90,
    83,
    73,
    54,
    73,
    107,
    112,
    118,
    97,
    71,
    52,
    103,
    82,
    71,
    57,
    108,
    73,
    105,
    119,
    105,
    97,
    87,
    70,
    48,
    73,
    106,
    111,
    120,
    78,
    84,
    69,
    50,
    77,
    106,
    77,
    53,
    77,
    68,
    73,
    121,
    102,
    81,
    46,
    83,
    102,
    108,
    75,
    120,
    119,
    82,
    74,
    83,
    77,
    101,
    75,
    75,
    70,
    50,
    81,
    84,
    52,
    102,
    119,
    112,
    77,
    101,
    74,
    102,
    51,
    54,
    80,
    79,
    107,
    54,
    121,
    74,
    86,
    95,
    97,
    100,
    81,
    115,
    115,
    119,
    53,
    99,
    0,
    99,
    108,
    111,
    117,
    100,
    45,
    115,
    100,
    107,
    45,
    106,
    115,
  ],
  "type": "Buffer",
}
`;

exports[`socket proxy customAuthRequestHandler returns the correct buffer without location ID 1`] = `
{
  "data": [
    1,
    0,
    0,
    0,
    155,
    101,
    121,
    74,
    104,
    98,
    71,
    99,
    105,
    79,
    105,
    74,
    73,
    85,
    122,
    73,
    49,
    78,
    105,
    73,
    115,
    73,
    110,
    82,
    53,
    99,
    67,
    73,
    54,
    73,
    107,
    112,
    88,
    86,
    67,
    74,
    57,
    46,
    101,
    121,
    74,
    122,
    100,
    87,
    73,
    105,
    79,
    105,
    73,
    120,
    77,
    106,
    77,
    48,
    78,
    84,
    89,
    51,
    79,
    68,
    107,
    119,
    73,
    105,
    119,
    105,
    98,
    109,
    70,
    116,
    90,
    83,
    73,
    54,
    73,
    107,
    112,
    118,
    97,
    71,
    52,
    103,
    82,
    71,
    57,
    108,
    73,
    105,
    119,
    105,
    97,
    87,
    70,
    48,
    73,
    106,
    111,
    120,
    78,
    84,
    69,
    50,
    77,
    106,
    77,
    53,
    77,
    68,
    73,
    121,
    102,
    81,
    46,
    83,
    102,
    108,
    75,
    120,
    119,
    82,
    74,
    83,
    77,
    101,
    75,
    75,
    70,
    50,
    81,
    84,
    52,
    102,
    119,
    112,
    77,
    101,
    74,
    102,
    51,
    54,
    80,
    79,
    107,
    54,
    121,
    74,
    86,
    95,
    97,
    100,
    81,
    115,
    115,
    119,
    53,
    99,
    0,
  ],
  "type": "Buffer",
}
`;
